--- a/Tracer/Example/Example.csproj
+++ b/Tracer/Example/Example.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Serialization.Abstraction\Serialization.Abstraction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="12.0.2" />
   </ItemGroup>
 
 </Project>
